javaのバージョンに合わせた記述に修正